bk_ida/bzip2ida/c2/handle_compress
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:960:12: error: expected expression
*( _OWORD *)&state->inUse[16] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:960:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[16] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:961:12: error: expected expression
*( _OWORD *)&state->inUse[32] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:961:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[32] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:962:12: error: expected expression
*( _OWORD *)&state->inUse[48] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:962:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[48] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:963:12: error: expected expression
*( _OWORD *)&state->inUse[64] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:963:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[64] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:964:12: error: expected expression
*( _OWORD *)&state->inUse[80] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:964:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[80] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:965:12: error: expected expression
*( _OWORD *)&state->inUse[96] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:965:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[96] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:966:12: error: expected expression
*( _OWORD *)&state->inUse[112] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:966:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[112] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:967:12: error: expected expression
*( _OWORD *)&state->inUse[128] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:967:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[128] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:968:12: error: expected expression
*( _OWORD *)&state->inUse[144] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:968:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[144] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:969:12: error: expected expression
*( _OWORD *)&state->inUse[160] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:969:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[160] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:970:12: error: expected expression
*( _OWORD *)&state->inUse[176] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:970:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[176] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:971:12: error: expected expression
*( _OWORD *)&state->inUse[192] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:971:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[192] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:972:12: error: expected expression
*( _OWORD *)&state->inUse[208] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:972:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[208] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:973:12: error: expected expression
*( _OWORD *)&state->inUse[224] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:973:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[224] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:974:12: error: expected expression
*( _OWORD *)&state->inUse[240] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:974:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[240] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:975:12: error: expected expression
*( _OWORD *)state->inUse = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/bzlib.c:975:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)state->inUse = 0LL; 
   ^
32 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/handle_compress/src/obj/bzlib.o] Error 1
